Created amd connected Products folder

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -10,7 +10,7 @@
             </h2>
             <p class='landing-main-text'>
             We sell all types of Antiques, which you will not find anywhere in the world, click <a 
-            href='{% url "home" %}' id='product-link'>here</a> to see our selection.
+            href='{% url "products" %}' id='product-link'>here</a> to see our selection.
             </p>
         </div>
     </section>
