--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
                     <button type='search' class='search-btn'>Search</button>
                 </form>
                  <li><a href="{% url 'home' %}">Home</a></li>
-                <li><a href="{% url 'home' %}"></a></li>
+                <li><a href="{% url 'products' %}">Our Antiques</a></li>
                 {% if user.is_authenticated %}
                 <li><a href="{% url 'home' %}"></a></li>
                 {%  else %}
