--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
         </div>
         <div id='navbar' class='navbar-collapse collapse'>
             <ul class='nav navbar-nav navbar-center'>
-                <form action='{% url "home" %}' id='search' method='GET'
+                <form action='{% url "search" %}' id='search' method='GET'
                     <input type='text' class='search-btn' name='q' palceholder='Search Antiques'>
                     <button type='search' class='search-btn'>Search</button>
                 </form>
