Chnaging parts of the codes due to newer version of django

--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% load static from staticfiles %}
+{% load staticfiles %}
 
 {% load bootstrap_tags %}
 
@@ -12,28 +12,32 @@
 
         <h2 class='header-info'>Our Products</h2>
 
-            <div class="row row-flex">
+    <div class="row row-flex text-center">
+
     {% for product in products %}
-        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
-            <div class="panel-body">
-                <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
+    <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-4 col-md-4 display panel panel-default">
+        <div class="panel-body">
+            <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
+            <h3> {{ product.name }} </h3>
+            <p class="product-description"> {{ product.description }} </p>
+            <p>Price: <span class="glyphicon glyphicon-euro" aria-hidden="true"></span> {{ product.price }} </p>
+            <form method="post" class="quantity-input" action="{% url '#' product.id %}">
 
-                <h3>{{ product.name }}</h3>
-                <p class="product-description">{{ product.description }}</p>
-                <p>{{ product.price }}</p>
+                {% csrf_token %}
 
-                <form method="post" action="{% url 'home' product.id %}">
-                    {% csrf_token %}
-                    <div class="input-group">
-                        <input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Quantity">
-                        <span class="input-group-btn">
-                            <button class="btn btn-success" type="submit">Add</button>
-                        </span>
-                    </div>
-                </form>
-            </div>
+                <div class="input-group">
+                    <input name="quantity" type="number" min="1" max="999" class="form-control"
+                        placeholder="Must add minimum one item" required>
+                    <span class="input-group-btn">
+                        <button class="btn btn-success" type="submit">Add</button>
+                    </span>
+                </div><br>
+            </form>
         </div>
+    </div>
+
     {% endfor %}
+
 </div>
 
 {% endblock %}
