--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% load staticfiles %}
+{% load static from staticfiles %}
 
 {% load bootstrap_tags %}
 
@@ -21,7 +21,7 @@
             <h3> {{ product.name }} </h3>
             <p class="product-description"> {{ product.description }} </p>
             <p>Price: <span class="glyphicon glyphicon-euro" aria-hidden="true"></span> {{ product.price }} </p>
-            <form method="post" class="quantity-input" action="{% url '#' product.id %}">
+            <form method="post" class="quantity-input" action="{% url 'add_to_cart' product.id %}">
 
                 {% csrf_token %}
 
