--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -20,7 +20,7 @@
             <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
             <h3> {{ product.name }} </h3>
             <p class="product-description"> {{ product.description }} </p>
-            <p>Price: <span class="glyphicon glyphicon-euro" aria-hidden="true"></span> {{ product.price }} </p>
+            <p>Price: <span class="glyphicon glyphicon-pound" aria-hidden="true"></span> {{ product.price }} </p>
             <form method="post" class="quantity-input" action="{% url 'add_to_cart' product.id %}">
 
                 {% csrf_token %}
