--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -52,6 +52,12 @@
         </div>
     </div>
 {% endfor %}
+<div class="row">
+    <p>Total</p>
+    <p><span class="glyphicon glyphicon-pound" aria-hidden="true"></span>{{ total }}</p>
+    <a href="{% url 'checkout' %}" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-ok-sign"
+            aria-hidden="true"></span> Checkout</a>
+</div>
 
 
 
