--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,7 +6,7 @@
 
 <h2 class="page-title">Contact Us</h2><br>
 <p>Email us your query and we will assist you with it</p>
-<form action="" method="POST">
+<form action="" method="post">
 
     {% csrf_token %}
 
