--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -15,7 +15,7 @@
             <div class="caption">
                 <h3>{{ item.product.brand}}</h3>
                 <p class="product-description">{{ item.product.description }}</p>
-                <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ item.product.price }}</p>
+                <p><span class="glyphicon glyphicon-gbp" aria-hidden="true"></span>{{ item.product.price }}</p>
                 <form class="form-inline quantity-input" method="post" action="{% url 'adjust_cart' item.id %}">
 
                     {% csrf_token %}
@@ -35,7 +35,7 @@
                         </span>
                     </div>
                 </form>
-                <form class="form-inline quantity-input" method="post" action="{% url 'adjust_cart'  item.id %}">
+                <form class="form-inline quantity-input" method="post" action="{% url 'adjust_cart' item.id  %}">
 
                     {% csrf_token %}
 
@@ -54,7 +54,7 @@
 {% endfor %}
 <div class="row">
     <p>Total</p>
-    <p><span class="glyphicon glyphicon-pound" aria-hidden="true"></span>{{ total }}</p>
+    <p><span class="glyphicon glyphicon-gbp" aria-hidden="true"></span>{{ total }}</p>
     <a href="{% url 'checkout' %}" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-ok-sign"
             aria-hidden="true"></span> Checkout</a>
 </div>
