--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -17,17 +17,19 @@
     {% for product in products %}
     <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-4 col-md-4 display panel panel-default">
         <div class="panel-body">
-            <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
+             <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
+            <br>
+            <br>
             <h3> {{ product.name }} </h3>
             <p class="product-description"> {{ product.description }} </p>
-            <p>Price: <span class="glyphicon glyphicon-pound" aria-hidden="true"></span> {{ product.price }} </p>
+            <p>Price: <span class="glyphicon glyphicon-gbp" aria-hidden="true"></span> {{ product.price }} </p>
             <form method="post" class="quantity-input" action="{% url 'add_to_cart' product.id %}">
 
                 {% csrf_token %}
 
                 <div class="input-group">
                     <input name="quantity" type="number" min="1" max="999" class="form-control"
-                        placeholder="Must add minimum one item" required>
+                        placeholder="Add" required>
                     <span class="input-group-btn">
                         <button class="btn btn-success" type="submit">Add</button>
                     </span>
