--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -5,6 +5,6 @@
 {% block content %}
 
 <p> Your password has been set. You may go ahead and log in.</p>
-<p><a href="{{ login_url }}">Log in</a></p>
+<p><a href="{% url 'login' %}">Log in</a></p>
 
 {% endblock %}
