--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -7,29 +7,12 @@
 {% block content %}
 
 {% if validlink %}
-<p>Please enter your new password twice.<br>
-    So we can verify you typed it in correctly.</p>
-<form action="" method="POST" class="accountform">
-    <div style="display:none">
-        <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
-    </div>
-    <table>
-        <tr>
-            <td>{{ form.new_password1.errors }}
-                <label for="id_new_password1" id="new_password1">New Password:</label></td>
-            <td>{{ form.new_password1 }}</td>
-        </tr>
-        <tr>
-           <td>{{ form.new_password2.errors }}
-                <label for="id_new_password2" id="new_password2">Confirm Password:</label></td>
-            <td>{{ form.new_password2 }}</td>
-        </tr> 
-        <tr>    
-            <td></td>
-            <td><input type="submit" class="seatch-btn" value="Change my password"/></td>
-        </tr>
-    </table>
-</form>
+<h3>Change password</h3>
+    <form method="post">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <button type="submit">Change password</button>
+    </form>
 
 {% else %}
 
