Styling the website

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -4,7 +4,7 @@
 <div class='container img-responsive block-center'>
     <section class='landing-section landing-main'>
         <div class='landing-section-content'>
-            <h1 class='brand'>All types of Antiques</h1>
+            <h1 class='brand'>Antiques</h1>
             <h2>
             <span class='brand-text'>Discover unique objects</span>
             </h2>
