--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -7,7 +7,7 @@
 {% block page_heading %}User Login{% endblock %}
 
 {% block content %}
-<h2 class="page-title">Login</h2><br>
+<h2 class="page-title-login">Login</h2>
 <div class="container text-center">
     <form method="post">
         {% csrf_token %}
