--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -7,13 +7,21 @@
 {% block content %}
 <h2 class="page-title">Shopping Cart</h2>
 
+<div class="row-cart">
+    <p>Total:</p>
+    <p><span class="glyphicon glyphicon-gbp" aria-hidden="true"></span>{{ total }}</p>
+    <a href="{% url 'checkout' %}" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-ok-sign"
+            aria-hidden="true"></span> Checkout</a>
+</div>
+<br>
+<br>
 {% for item in cart_items %}
 
     <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-display">
         <div class="panel-body">
             <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
             <div class="caption">
-                <h3>{{ item.product.brand}}</h3>
+                <h3>{{ item.product.name }}</h3>
                 <p class="product-description">{{ item.product.description }}</p>
                 <p><span class="glyphicon glyphicon-gbp" aria-hidden="true"></span>{{ item.product.price }}</p>
                 <form class="form-inline quantity-input" method="post" action="{% url 'adjust_cart' item.id %}">
@@ -28,7 +36,7 @@
                             <div class="input-group">{{ item.quantity }}</div>
                         </div>
                     </div><br>
-                    <span>*Increase or Decrease Qunatity to Amend total*</span>
+                    <span>*Amend order*</span>
                     <div>
                         <span class="input-group-btn">
                             <button class="btn btn-warning" type="submit">Amend Quantity</button>
@@ -36,10 +44,7 @@
                     </div>
                 </form>
                 <form class="form-inline quantity-input" method="post" action="{% url 'adjust_cart' item.id  %}">
-
                     {% csrf_token %}
-
-
                 <input name="qunatity" type="hidden" value="0" class="form-control">
                 <div>
                     <span class="input-group-btn">
@@ -52,12 +57,6 @@
         </div>
     </div>
 {% endfor %}
-<div class="row">
-    <p>Total</p>
-    <p><span class="glyphicon glyphicon-gbp" aria-hidden="true"></span>{{ total }}</p>
-    <a href="{% url 'checkout' %}" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-ok-sign"
-            aria-hidden="true"></span> Checkout</a>
-</div>
 
 
 
