--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -17,27 +17,12 @@
 {% block content %}
 
 <h2 class="page-title">Checkout</h2><br>
-<div class="row row-flex">
-    {% for item in cart_items %}
-    <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
-        <div class="panel-body">
-            <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
-            <div class="caption">
-                <h3>{{ item.product.name }}</h3>
-                <p class="product-description">{{ item.product.description }}</p>
-                <p>{{ item.quantity }} - {{ item.product.name }}</p>
-                <p><span class="glyphicon glyphicon-pound" aria-hidden="true"></span>{{ item.product.price }}</p>
-            </div>
-        </div>
-    </div>
-
-    {% endfor %}
-
-    <br><br>
-</div>
-<div class="row">
+<br>
+<div class="row-checkout">
+    <h3>Number of items in the basket: {{ product_count }}<h3>
+    <br> 
     <p>Total:</p>
-    <p><span class="glyphicon glyphicon-pound" aria-hidden="true"></span>{{ total }}</p>
+    <p><span class="glyphicon glyphicon-gbp" aria-hidden="true"></span>{{ total }}</p>
 </div>
 <form role="form" method="POST" id="payment-form" action="{% url 'checkout' %}">
     <legend>Payment Details</legend>
