--- a/templates/base.html
+++ b/templates/base.html
@@ -27,12 +27,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class='navbar-brand' href='{% url "home" %}'>Antiques shop</a>
+            <a class='navbar-brand' href='{% url "home" %}'><span class="glyphicon glyphicon-home"></span></a>
         </div>
         <div id='navbar' class='navbar-collapse collapse'>
             <ul class='nav navbar-nav navbar-center'>
             <form action='{% url "search" %}' id='search' method='get'>
-                <input type='text' type="button" class='search-btn' name='q'>
+                <input type='text' class='search-btn' name='q' placeholder="Find Antiques">
                 <button type='search' class='search-btn'>
             <span class="glyphicon glyphicon-search"></span></button>
             </form>
@@ -42,7 +42,7 @@
                 <li><a href="{% url 'logout' %}">Log Out</a></li>
                 {%  else %}
                 <li><a href="{% url 'registration' %}">Register</a></li>
-                <li><a href="{% url 'login' %}"></a>Log In</li>
+                <li><a href="{% url 'login' %}">Log In</a></li>
                 {% endif %}
                 <li>
                     <a href="{% url 'view_cart' %}">
@@ -78,10 +78,17 @@
     <footer class="container-fluid">
         <div class="row ">
             <div class="col-sm-4 ">
-                <h6 class="general about">About Us</h6>
-                <p class="inline-block ">
-                    We are sell all types of Antiques.
-                </p>
+                <h6 class="general about">Rate Us</h6>
+                <br>
+                <br>
+                <br>
+                <div class="rating">
+                   <input type="radio" name="star" id="star1"><label for="star1"></label>
+                   <input type="radio" name="star" id="star2"><label for="star2"></label>
+                   <input type="radio" name="star" id="star3"><label for="star3"></label>
+                   <input type="radio" name="star" id="star4"><label for="star4"></label>
+                   <input type="radio" name="star" id="star5"><label for="star5"></label>
+                </div>
             </div>
             <div class="col-sm-4 ">
                 <h6 class="general copyright">Antiques Shop Ltd</h6>
