Removing aws bucket

--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
 
-{% load static from staticfiles %}
+{% load staticfiles %}
 
 {% load bootstrap_tags %}
 
 {% block content %}
 
-<h2 class='page-title'>Our Antiques</h2><br>
-<p class='product-info'>If you would like to some more information or advice on any of our antiques please click
-    <a href='{% url "contact" %}'>here</a> to send us your query.</p><br><br>
+<h2 class="page-title">Our Antiques</h2><br>
+<p class="product-info">If you would like to some more information or advice on any of our antiques please click
+    <a href="{% url 'contact' %}">here</a> to send us your query.</p><br><br>
 
-        <h2 class='header-info'>Our Products</h2>
+        <h2 class="header-info">Our Products</h2>
 
     <div class="row row-flex text-center">
 
