--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -93,6 +93,10 @@ p {
     width: 100%;
 }
 
+.col-sm-4{
+    padding-bottom: 10px;
+}
+
 /*Navigation bar*/
 
 .navbar-collapse, .navbar-header {
@@ -110,6 +114,30 @@ p {
 
 .nav-link {
     font-size: 15px;
+}
+
+.navbar-default
+.navbar-toggle:hover, .navbar-default
+.navbar-toogle:focus {
+    background-color: transparent;
+}
+
+ul.nav .navbar-nav
+.navbar-center {
+    margin: 0;
+}
+
+.navbar-toggle .icon-bar{
+    width: 28px;
+}
+
+.navbar-default
+.navbar-toggle .icon-bar {
+    background-color: black;
+}
+
+ul .nav .navbar-nav .navbar-center {
+    margin: 0;
 }
 
  /**Home Page**/ 
@@ -292,6 +320,7 @@ footer {
 
 .col-sm-4 {
     text-align: center;
+    padding-bottom: 10px;
 }
 
 .fa {
@@ -367,3 +396,28 @@ h6.general {
     opacity: 1;
 
 }
+
+/**Media Queries**/
+
+ @media (min-width: 991px) {
+     a.navbar-brand {
+         font-size: 16px;
+         padding-right: 80px;
+     }
+ }
+
+ @media (max-width: 992px) {
+     .search-btn {
+         font-size: 8px;
+         margin-top: 15px;
+     }
+     a.navbar-brand{
+        font-size: 16px;
+    }
+    .navbar-nav>li>a {
+        font-size: 12px;
+    }
+    .page-title {
+        margin-top: 80px;
+    }
+ }
