--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/cerulean/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    
     {% block head_js %}
     {% endblock %}
 
@@ -76,7 +78,7 @@
     <!-- Footer -->
 
     <footer class="container-fluid">
-        <div class="row ">
+        <div class="row-footer">
             <div class="col-sm-4 ">
                 <h6 class="general about">Rate Us</h6>
                 <br>
@@ -107,8 +109,5 @@
             </div>
         </div>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    
 </body>
 </html>
