--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -31,9 +31,10 @@
                     <div class="form-group">
                         <label for="exampleInputAmount" class="sr-only">New Qty</label>
                         <div class="input-group">
-                            <div class="input-group">Qty</div>
+                            <div class="input-group">Qty {{ item.quantity }}</div>
+                            
                             <input name="quantity" type="number" min="0" max="999" class="form-control">
-                            <div class="input-group">{{ item.quantity }}</div>
+                            
                         </div>
                     </div><br>
                     <span>*Amend order*</span>
