--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -4,15 +4,14 @@
 
 {% block head_js %}
 
-<script type="text/javascript" src="https://js.stripe.com/v2"></script>
+<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 <script type="text/javascript">
     //<![CDATA[
         Stripe.publishableKey = '{{ publishable }}';
     //]]>
 </script>
 <script type="text/javascript" src="{% static 'js/stripe.js' %}"></script>
-
-{% endblock %}
+{% endblock head_js %}
 
 {% block content %}
 
@@ -24,23 +23,24 @@
     <p>Total:</p>
     <p><span class="glyphicon glyphicon-gbp" aria-hidden="true"></span>{{ total }}</p>
 </div>
-<form role="form" method="POST" id="payment-form" action="{% url 'checkout' %}">
+<form role="form" method="post" id="payment-form" action="{% url 'checkout' %}">
     <legend>Payment Details</legend>
+
     <div id="credit-card-errors" style="display: none;">
-        <div id="alert-message block-message error" id="stripe-error-message"></div>
+        <div class="alert-message block-message error" id="stripe-error-message"></div>
     </div>
+
     <div class="form-group col-md-6">
         {{ order_form | as_bootstrap }}
     </div>
+
     <div class="form-group col-md-6">
         {{ payment_form | as_bootstrap }}
     </div>
 
     {% csrf_token %}
-
     <div class="form-group col-md-12">
-        <input class="btn btn-primary" id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
+        <input class=" btn btn-primary" id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
     </div>
 </form>
-
 {% endblock %}
