--- a/accounts/templates/password_reset.html
+++ b/accounts/templates/password_reset.html
@@ -7,9 +7,9 @@
 {% block content %}
 
 <h3>Forgot password</h3>
-  <form method="post">
+  <form method="POST" class="form-signin">
     {% csrf_token %}
-    {{ form.as_p }}
+    <input name="email" class="form-control" placeholder="Email address" type="email" id="id_email" required="true">
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 {% endblock %}
