--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -18,7 +18,7 @@
 <h2 class="page-title">Checkout</h2><br>
 <br>
 <div class="row-checkout">
-    <h3>Number of items in the basket: {{ product_count }}<h3>
+    <h3>Number of items in the basket: {{ product_count }}</h3>
     <br> 
     <p>Total:</p>
     <p><span class="glyphicon glyphicon-gbp" aria-hidden="true"></span>{{ total }}</p>
